RESOLVED FIXED71696
[EFL] Emit the "frame,created" signal earlier.
https://bugs.webkit.org/show_bug.cgi?id=71696
Summary [EFL] Emit the "frame,created" signal earlier.
Raphael Kubo da Costa (:rakuco)
Reported 2011-11-07 08:46:47 PST
[EFL] Emit the "frame,created" signal earlier.
Attachments
Patch (2.49 KB, patch)
2011-11-07 08:47 PST, Raphael Kubo da Costa (:rakuco)
no flags
Fixed patch for landing (2.51 KB, patch)
2011-11-07 09:32 PST, Raphael Kubo da Costa (:rakuco)
no flags
Raphael Kubo da Costa (:rakuco)
Comment 1 2011-11-07 08:47:55 PST
Gyuyoung Kim
Comment 2 2011-11-07 09:14:10 PST
Raphael Kubo da Costa (:rakuco)
Comment 3 2011-11-07 09:32:43 PST
Created attachment 113881 [details] Fixed patch for landing
WebKit Review Bot
Comment 4 2011-11-07 14:38:46 PST
Comment on attachment 113881 [details] Fixed patch for landing Clearing flags on attachment: 113881 Committed r99480: <http://trac.webkit.org/changeset/99480>
WebKit Review Bot
Comment 5 2011-11-07 14:38:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.