[EFL] Emit the "frame,created" signal earlier. https://bugs.webkit.org/show_bug.cgi?id=71696

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-11-07
Reviewed by Kenneth Rohde Christiansen.

FrameLoader::loadURLIntoChildFrame will trigger the machinery that will call
FrameLoaderClientEfl::dispatchDidStartProvisionalLoad. However, since we were
emitting the "frame,created" signal after that, applications would connect to
it after some other frame signals had already been emitted. Should help tests
such as http/tests/loading/empty-subframe.html pass.

* ewk/ewk_frame.cpp:
(ewk_frame_child_add):
* ewk/ewk_view.cpp:
(ewk_view_frame_create):

Canonical link: https://commits.webkit.org/88056@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99480 268f45cc-cd09-0410-ab3c-d52691b4dbfc